# hmx

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  architecture.md
.github/workflows/: ci.yml
conformance/: README.md
conformance/generator/: pyproject.toml  regenerate.sh
conformance/generator/hmx_fixtures/: __init__.py  __main__.py  assertions.py  build.py  encodings.py  manifest.py  mutate.py  registry.py
conformance/goldens/: dangling-mapping-id.validate.json  dotdot-substring-path.validate.json  malformed-registry.validate.json  mapping-role-non-mapping-format.validate.json  minimal.describe.json  missing-required-column.validate.json  real-shape-basin.describe.json  real-shape-basin.validate.json  undeclared-attribute-field.validate.json
crates/core/: Cargo.toml
crates/core/src/: canonical.rs  describe.rs  domains.rs  dto.rs  hash.rs  lib.rs  manifest.rs  mappings.rs  registry.rs  report.rs  types.rs  validate.rs
crates/core/src/readers/: cog_reader.rs  control_plane.rs  geoparquet_reader.rs  mod.rs  parquet_meta.rs  zarr_reader.rs
crates/core/tests/: bulk_readers.rs  control_plane_readers.rs  engine.rs  manifest_reader.rs
crates/core/tests/fixtures/: multiband-float32.tif
crates/core/tests/fixtures/real-dudh/: cell_to_glacier.parquet  dem.tif  forcing_cct.parquet  glacier_thickness_m_we.parquet
crates/core/tests/fixtures/synthetic-zarr/: zarr.json
crates/core/tests/fixtures/synthetic-zarr/elevation/: zarr.json
crates/core/tests/fixtures/synthetic-zarr/elevation/c/0/: 0
crates/core/tests/fixtures/synthetic-zarr/time/: zarr.json
crates/core/tests/fixtures/valid-package/: manifest.json
crates/python/: Cargo.toml  pyproject.toml
crates/python/src/: lib.rs
crates/python/tests/fixtures/unknown-version/: manifest.json
crates/python/tests/fixtures/valid-min/: manifest.json
schemas/: README.md  describe.schema.json  domain.schema.json  field_registry.schema.json  manifest.schema.json  mapping.schema.json  validate.schema.json
schemas/examples/: describe.valid.json  domain.glacier.valid.json  field_registry.invalid-missing-conservation-class.json  field_registry.valid.json  manifest.invalid-additional-property.json  manifest.invalid-unknown-format-version.json  manifest.valid.json  mapping.cell_to_glacier.valid.json  mapping.invalid-cell_to_gauge-missing-variable.json  validate.valid.json
spec/: HMX_SPEC.md  SCHEMA-REVISIONS.md
src/: main.rs
tests/: cli.rs  conformance.rs
tests/fixtures/malformed-manifest/: manifest.json
tests/fixtures/nonconformant/registry/: fields.json
tests/fixtures/valid/: manifest.json
