[project]
name = "hmx-fixtures"
version = "0.1.0"
description = "Dev-only HMX conformance fixture generator. NOT an HMX writer."
readme = "../README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
  "numpy==2.1.3",
  "pyarrow==18.1.0",
  "rasterio==1.4.3",
  "geopandas==1.0.1",
  "shapely==2.0.6",
]

[tool.hmx-fixtures]
dev_only = true
is_hmx_writer = false
