[package]
name = "hmx-core"
version = "0.1.0"
edition = "2024"

[dependencies]
thiserror = "2"
tracing = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Strict RFC 3339 parsing for manifest `created_at` (spec §3.4). `time` over
# `chrono` for its strictly-RFC-3339 `well_known::Rfc3339` parser.
time = { version = "0.3", features = ["parsing", "formatting"] }
