[package]
name = "hmx-core"
version = "0.1.0"
edition = "2024"

[dependencies]
thiserror = "2"
tracing = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Pure-Rust SHA-256 (RustCrypto) for the manifest content-hash (spec §9, D1).
# NO openssl / ring / C crypto — pure Rust, audited stack.
sha2 = "0.10"
# Strict RFC 3339 parsing for manifest `created_at` (spec §3.4). `time` over
# `chrono` for its strictly-RFC-3339 `well_known::Rfc3339` parser.
time = { version = "0.3", features = ["parsing", "formatting"] }
# --- A4 BULK metadata-only reader stack (pure Rust, NO GDAL) ---
# Apache Arrow / Parquet, pinned to major 58. `parquet` carries the `arrow`
# integration (surfaces the schema as an arrow `Schema`) plus `snap`. A4 reads
# footer/schema/row-group statistics only — never a data page, never a gridded
# chunk, never the geoparquet `geometry` blob.
arrow = { version = "58", default-features = false }
parquet = { version = "58", default-features = false, features = ["arrow", "snap"] }
# `bytes::Bytes` is parquet's zero-copy in-memory `ChunkReader` source.
bytes = "1"
# Pure-Rust Zarr-v3 *metadata* crate (NOT the full `zarrs` store): parses `zarr.json`
# array metadata. No async, no object_store, no chunk-IO. A4 reads `zarr.json` + the
# 1-D coordinate chunks only — never a `c/0/0/0` data chunk.
zarrs_metadata = "0.7"
# Pure-Rust zstd decoder for the 1-D coordinate chunks only (no zstd-sys / no C).
ruzstd = "0.7"
# Pure-Rust TIFF/GeoTIFF reader, default-features=false (trims OUT every pixel-decode
# codec). A4 reads georef + band TIFF TAGS only — never a pixel strip/tile. NO GDAL.
tiff = { version = "0.11", default-features = false }

[dev-dependencies]
# Writes tiny synthetic parquet/geoparquet fixtures in-test (the metadata reader is
# exercised end-to-end without committing a synthetic binary). Same major as the
# runtime `parquet`/`arrow` pins so the writer and reader agree.
arrow = { version = "58", default-features = false }
parquet = { version = "58", default-features = false, features = ["arrow", "snap"] }
